src/test/ui/feature-gates/feature-gate-precise_pointer_size_matching.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/feature-gate-precise_pointer_size_matching.rs:6:11
   |
LL |     match 0usize {
   |           ^^^^^^ pattern `_` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/feature-gate-precise_pointer_size_matching.rs:10:11
   |
LL |     match 0isize {
   |           ^^^^^^ pattern `_` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
